--- a/index.html
+++ b/index.html
@@ -29,3 +29,5 @@
  <div style="text-align:center;">
 <video STYLE="text-align:center;"src="video.mp4" controls  />
 </div>
+<h1 STYLE="text-align:center;font-size:1.4em;">Our Right Reserved<BR> </h1>
+<h1 STYLE="text-align:center;font-size:1em;">Ronish Khadka<BR> </h1>
