--- a/index.html
+++ b/index.html
@@ -30,4 +30,4 @@
 <video STYLE="text-align:center;"src="video.mp4" controls  />
 </div>
 <h1 STYLE="text-align:center;font-size:1.4em;">Our Right Reserved<BR> </h1>
-<h1 STYLE="text-align:center;font-size:1em;">Ronish Khadka<BR> </h1>
+<h1 STYLE="text-align:center;font-size:1em;">Dipesh Khadka(Eastern College Of Engineering)<BR> </h1>
