--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <a STYLE="padding-right:20px;"href="service.html">Services</a>
 </div>
 
-<h1 STYLE="text-align:center;font-size:1.4em;">KARED.BUILDERS </h1>
+<h1 STYLE="text-align:center;font-size:1.4em;">Dipesh.BUILDERS </h1>
 
 <p STYLE="text-align:center;font-size:1em;line-height: 2;margin-bottom: 60px;">We offers customized architectural and engineering<br> designs, renovation services, and space optimization to create comfortable, safe, and aesthetically pleasing structures.<br> With skilled professionals and the latest technology, the company delivers reliable, cost-effective, and innovative construction services under one roof.</p>
 
