--- a/service.html
+++ b/service.html
@@ -6,6 +6,7 @@
 <a STYLE="padding-right:20px;" href="index.html">Home</a>
 <a STYLE="padding-right:20px;"href="about.html">About</a>
 <a STYLE="padding-right:20px;"href="service.html">Services</a>
+<a STYLE="padding-right:20px;"href="Read.html">Read more</a>
 </div>
 
 <h1 STYLE="text-align:center;font-size:1.4em;">Services </h1>
