--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
  <div style="text-align:center;">
-<video STYLE="text-align:center;width: 50%;padding: 10PX 30PX 10PX 30PX"src="video.mp4" controls  />
+<video STYLE="width:50%;"src="video.mp4" controls  />
 </div>
 <h1 STYLE="text-align:center;font-size:1.4em;">Our Right Reserved<BR> </h1>
 <h1 STYLE="text-align:center;font-size:1em;">Dipesh Khadka(Eastern College Of Engineering)<BR> </h1>
