--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <p STYLE="text-align:center;font-size:1em;line-height: 2;margin-bottom: 60px;">“Your one-stop solution for building, design, and interiors.”</p>
 
 <div STYLE="text-align:center;">
-<a STYLE="font-size:20PX;background-color: RED;padding: 10PX 30PX 10PX 30PX;color: WHITE;"href="google.com">Read more</a>
+<a STYLE="font-size:20PX;background-color: RED;padding: 10PX 30PX 10PX 30PX;color: WHITE;"href="dipesh.html">Read more</a>
 <div/>
 
 
