--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p STYLE="text-align:center;font-size:1em;line-height: 2;margin-bottom: 60px;">We offers customized architectural and engineering<br> designs, renovation services, and space optimization to create comfortable, safe, and aesthetically pleasing structures.<br> With skilled professionals and the latest technology, the company delivers reliable, cost-effective, and innovative construction services under one roof.</p>
 
 <div STYLE="text-align:center;">
-<a STYLE="font-size:20PX;background-color: RED;padding: 10PX 30PX 10PX 30PX;color: WHITE;"href="google.com">Read more</a>
+<a STYLE="font-size:20PX;background-color: RED;padding: 10PX 30PX 10PX 30PX;color: WHITE;"href="dipesh.html">Read more</a>
 <div/>
 
 <hr style="width: 70%;">
