--- a/service.html
+++ b/service.html
@@ -22,5 +22,5 @@ Renovation & Remodeling – Transforming existing spaces into modern and efficie
 Project Management – Timely, cost-effective, and quality-driven execution of projects.”</p>
 
 <div STYLE="text-align:center;">
-<a STYLE="font-size:20PX;background-color: RED;padding: 10PX 30PX 10PX 30PX;color: WHITE;"href="google.com">Read more</a>
+<a STYLE="font-size:20PX;background-color: RED;padding: 10PX 30PX 10PX 30PX;color: WHITE;"href="dipesh.html">Read more</a>
 <div/>
