--- a/dipesh.html
+++ b/dipesh.html
@@ -20,7 +20,7 @@
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 
-<img style="width: 33%;"src="imagedk.png">
+<img style="width: 50%;"src="imagedk.jpg">
 
 
 <h1 STYLE="text-align:center;font-size:1.2em;">OUR SERVICES </h1>
