--- a/dipesh.html
+++ b/dipesh.html
@@ -19,8 +19,9 @@
 
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
-
+<div>
 <img style="width: 50%;"src="imagedk.jpg">
+</div>
 
 
 <h1 STYLE="text-align:center;font-size:1.2em;">OUR SERVICES </h1>
