--- a/dipesh.html
+++ b/dipesh.html
@@ -20,7 +20,7 @@
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 <div>
-<img style="width: 50%;"src="imagedk.jpg">
+<img style="width: 50%;"src="imaged.jpg">
 </div>
 
 
