--- a/dipesh.html
+++ b/dipesh.html
@@ -20,10 +20,8 @@
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 <div>
-<img style="width: 50%;"src="imaged.jpg">
-<img style="width: 33%;"src="image1.jpg">
-<img style="width: 33%;"src="image2.jpg">
-<img style="width: 33%;margin-bottom: 60px;"src="image4.jpg">
+<img style="width: 50%;"src="imagedk.jpg">
+
 </div>
 
 
