--- a/index.html
+++ b/index.html
@@ -32,3 +32,9 @@
 </div>
 <h1 STYLE="text-align:center;font-size:1.4em;">Our Right Reserved<BR> </h1>
 <h1 STYLE="text-align:center;font-size:1em;">Dipesh Khadka(Eastern College Of Engineering)<BR> </h1>
+<hr style="width: 70%;">
+<h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
+<div>
+<img style="width: 50%;"src="imagedk.jpg">
+
+</div>
