--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 <div>
-<img style="width: 50%;"src="imagedk.jpg">
+<img style="width: 50%;"src="dandi.jpg">
 
 </div>
