--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 
 <img style="width: 60%;"src="dandi.jpg">
+<img style="width: 33%;"src="image2.jpg">
 
 
