--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 
-<img style="width: 60%;"src="dandi.jpg">
-<img style="width: 33%;"src="image2.jpg">
+<img style="width: 60%;"src="dandi.jpeg">
+<img style="width: 33%;"src="image2.jpeg">
 
 
