--- a/index.html
+++ b/index.html
@@ -37,5 +37,15 @@
 
 <img style="width: 60%;"src="dandi.jpeg">
 <img style="width: 33%;"src="image2.jpeg">
+<hr style="width: 70%;">
+
+<h1 style="text-align:center;font-size:1.2em;">Founder</h1>
+
+<!-- Founder main image -->
+<img src="dandi.jpg" style="width: 60%; display:block; margin:20px auto;" alt="Founder Photo">
+
+<!-- Second founder-related image -->
+<img src="image2.jpg" style="width: 33%; display:block; margin:20px auto;" alt="Founder Additional Photo">
+
 
 
