--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <img style="width: 33%;"src="image1.jpg">
 <img style="width: 33%;"src="image2.jpg">
 <img style="width: 33%;margin-bottom: 60px;"src="image4.jpg">
+<img style="width: 50%;"src="dandi.jpg">
 
 <h1 STYLE="text-align:center;font-size:1.2em;">OUR SERVICES </h1>
 
