--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <img style="width: 33%;"src="image1.jpg">
 <img style="width: 33%;"src="image2.jpg">
 <img style="width: 33%;margin-bottom: 60px;"src="image4.jpg">
-<img style="width: 50%;"src="dandi.jpg">
 
 <h1 STYLE="text-align:center;font-size:1.2em;">OUR SERVICES </h1>
 
@@ -35,7 +34,7 @@
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 
-<img style="width: 50%;"src="dandi.jpg">
+<img style="width: 50%;"src="ss.jpg">
 
 <h1 STYLE="text-align:center;font-size:1.4em;">Our Right Reserved<BR> </h1>
 <h1 STYLE="text-align:center;font-size:1em;">Dipesh Khadka(Eastern College Of Engineering)<BR> </h1>
