--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
 
-<img src="ss.jpg">
+<img src="dandi.jpg">
 
-<h1 STYLE="text-align:center;font-size:1.4em;">Our Right Reserved<BR> </h1>
+<h1 STYLE="text-align:center;font-size:1.4em;">All Right Reserved<BR> </h1>
 <h1 STYLE="text-align:center;font-size:1em;">Dipesh Khadka(Eastern College Of Engineering)<BR> </h1>
