--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
 <hr style="width: 70%;">
 <h1 STYLE="text-align:center;font-size:1.2em;">Founder</h1>
-
+<div>
 <img src="dandi.jpg">
+<img src="imaged.jpg">
 
+</div>
 <h1 STYLE="text-align:center;font-size:1.4em;">All Right Reserved<BR> </h1>
 <h1 STYLE="text-align:center;font-size:1em;">Dipesh Khadka(Eastern College Of Engineering)<BR> </h1>
